[project]
name = "chameleon-code"
version = "0.1.1"
description = "Chameleon Code - Use any AI model with Claude Code"
readme = "README.md"
authors = [{ name = "Tom Pollak", email = "tompollak1000@gmail.com" }]
requires-python = ">=3.10"
dependencies = [
    "fastapi>=0.118.0",
    "openai>=2.1.0",
    "pydantic>=2.11.10",
    "uvicorn>=0.37.0",
]

[project.scripts]
cham = "cam:main"
